# child

./: .gitignore  README.md  renovate.json
.github/workflows/: ci.yml  core-linux.yml  ui-child.yml
core-linux/: .gitignore  Cargo.toml  Justfile  README.md
core-linux/.cargo/: config.toml
core-linux/config/: core.toml.default
core-linux/crates/ss-core-ctl/: Cargo.toml
core-linux/crates/ss-core-ctl/src/: client.rs  main.rs
core-linux/crates/ss-core-daemon/: Cargo.toml
core-linux/crates/ss-core-daemon/src/: config.rs  lib.rs  main.rs  signals.rs  supervisor.rs
core-linux/crates/ss-core-daemon/tests/: config_test.rs
core-linux/crates/ss-core-enforce/: Cargo.toml
core-linux/crates/ss-core-enforce/src/: cgroup.rs  cgroup_mock.rs  enforcer.rs  errors.rs  idle.rs  lib.rs  matcher.rs  notifier.rs  proc_scan.rs  tracker.rs
core-linux/crates/ss-core-enforce/tests/: cgroup_mock_test.rs  cgroup_v2_test.rs  enforcer_test.rs  idle_test.rs  matcher_test.rs  proc_scan_test.rs  tracker_test.rs
core-linux/crates/ss-core-ipc/: Cargo.toml
core-linux/crates/ss-core-ipc/src/: app_state.rs  auth.rs  dto.rs  errors.rs  framing.rs  idempotency.rs  lib.rs  rpc.rs  server.rs
core-linux/crates/ss-core-ipc/src/methods/: auth.rs  child.rs  extension.rs  family.rs  mod.rs  policy.rs  system.rs  usage.rs
core-linux/crates/ss-core-ipc/tests/: auth_test.rs  framing_test.rs  methods_auth_test.rs  methods_child_test.rs  methods_extension_test.rs  methods_policy_test.rs  methods_system_test.rs  rpc_test.rs  server_test.rs
core-linux/crates/ss-core-model/: Cargo.toml
core-linux/crates/ss-core-model/src/: counter.rs  entities.rs  errors.rs  evaluator.rs  lib.rs  policy.rs
core-linux/crates/ss-core-model/tests/: counter_test.rs  entities_test.rs  evaluator_test.rs  policy_test.rs
core-linux/crates/ss-core-store/: Cargo.toml
core-linux/crates/ss-core-store/migrations/: V001__initial_schema.sql
core-linux/crates/ss-core-store/src/: errors.rs  keyring.rs  lib.rs  store.rs
core-linux/crates/ss-core-store/src/dao/: child.rs  device.rs  exception.rs  family.rs  idempotency.rs  mod.rs  parent.rs  policy.rs  signature.rs  usage.rs
core-linux/crates/ss-core-store/tests/: dao_family_test.rs  dao_policy_test.rs  dao_usage_test.rs  keyring_test.rs  migrations_test.rs
core-linux/packaging/debian/: postinst
core-linux/packaging/desktop/: screensteward-child.desktop
core-linux/systemd/: screensteward-core.service  screensteward-core.tmpfiles.conf
ui/: README.md  pubspec.yaml
ui/lib/: app.dart  main.dart
ui/lib/ipc/: dto.dart  dto.freezed.dart  dto.g.dart
ui/lib/l10n/: app_en.arb  app_fr.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_fr.dart
ui/lib/screens/: home.dart  request_extension.dart
ui/lib/state/: status_controller.dart
ui/lib/widgets/: budget_ring.dart
ui/linux/: CMakeLists.txt
ui/linux/runner/: my_application.cc
ui/test/: widget_test.dart
ui/test/ipc/: client_test.dart
ui/test/screens/: home_test.dart  request_extension_test.dart
ui/test/support/: test_app.dart
