[workspace]
resolver = "2"
members = [
    "crates/ss-core-model",
    "crates/ss-core-store",
    "crates/ss-core-enforce",
    "crates/ss-core-ipc",
    "crates/ss-core-daemon",
    "crates/ss-core-ctl",
]

[workspace.package]
edition = "2021"
license = "GPL-3.0-only"
rust-version = "1.75"
authors = ["ScreenSteward contributors"]
repository = "https://github.com/screensteward/child"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "signal", "net", "sync", "time", "fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-journald = "0.3"
parking_lot = "0.12"
async-trait = "0.1"
bytes = "1"
hex = "0.4"
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
refinery = { version = "0.8", features = ["rusqlite"] }
argon2 = "0.5"
zbus = { version = "4", default-features = false, features = ["tokio"] }
procfs = "0.16"
cgroups-rs = "0.3"
clap = { version = "4", features = ["derive"] }
toml = "0.8"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
